chore: cleanup obsolete docs and reorganize scripts
- Remove 14 obsolete files: FINAL_AUDIT_REPORT.md, FINAL_SUMMARY.md, SECURITY_FINAL_REPORT.md, CLEANUP_REPORT.md, TEST_REPORT.md, SETUP_FLOW_TEST.md, DOCUMENTATION_CLEANUP.md
- Remove debug/test artifacts: check-logs.html, debug-telegram.html, test-bookings.html, test-security.html, test-security-fixes.js, test-roadmap.csv
- Remove legacy/ directory (full git history preserved)
- Move initialize-admin.html and migrate-data.html to scripts/
- Maintain SOLUZIONE_PERSISTENZA.md as archival design documentation
- Update references in LOGIN_HELP.md, PERSISTENCE.md, SOLUZIONE_PERSISTENZA.md
- Reduce root from 40+ files to 18 essential files only

--- a/scripts/initialize-admin.html
+++ b/scripts/initialize-admin.html
@@ -65,13 +65,13 @@
 
     <script>
         const scripts = [
-            'js/config.js',
-            'js/security/hash.js',
-            'js/security/sanitizer.js',
-            'js/storage.js',
-            'js/utils.js',
-            'js/auth/users.js',
-            'js/auth/auth.js'
+            '../js/config.js',
+            '../js/security/hash.js',
+            '../js/security/sanitizer.js',
+            '../js/storage.js',
+            '../js/utils.js',
+            '../js/auth/users.js',
+            '../js/auth/auth.js'
         ];
         let loaded = 0, scriptsReady = false;
 
@@ -128,7 +128,7 @@
                         showMessage('✅ Logged in successfully! Redirecting...', 'success');
                         document.getElementById('initForm').style.display = 'none';
                         setTimeout(() => {
-                            window.location.href = 'index.html';
+                            window.location.href = '../index.html';
                         }, 1500);
                     } else {
                         showMessage('❌ Account created but login failed: ' + loginResult.message, 'error');
